--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -159,7 +159,7 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 				<h4>[INITIAL SKETCHES]</h4>
-				<p>Noticing that something is broken is an essential prerequisite for coming up with a creative solution to fix it.</p>
+				<p>I began by wireframing on paper first to get a general sense of how the general flow of the app. This allowed me to see how each screen would interact with the others as well as to experiement with placement of elements as well as possible sections within each screen.</p>
 				</div>
 			</div>
 
@@ -189,13 +189,6 @@
 				</div>
 			</div>
 
-			<div class="section-padding flex-center">
-				<div class="content-container">
-					<p>I began the Kitsune app by focusing on 5 key screens: Login Screen, a dashboard displaying most recent ride data, route navigation, an account page, and a ride analytic page. I chose these five screens as my starting point as they act as the entry point for many of the sub level screens. </p>
-
-					<p>Through these initial draft screens I was able to get a handle on how to incorporate planned features, as well as, see how features thought of in the planning phase will have to be altered or changed slightly.</p>
-				</div>
-			</div>
 
 			<div class="section-full flex-center">
 				<div class="pull-tech-color grey flex-center">
@@ -213,7 +206,9 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 				<h4>[WIREFRAMES]</h4>
-				<p>Noticing that something is broken is an essential prerequisite for coming up with a creative solution to fix it.</p>
+				<p><p>I began the Kitsune app by focusing on 5 key screens: Login Screen, a dashboard displaying most recent ride data, route navigation, an account page, and a ride analytic page. I chose these five screens as my starting point as they act as the entry point for many of the sub level screens. </p>
+
+					<p>Through these initial draft screens I was able to get a handle on how to incorporate planned features, as well as, see how features thought of in the planning phase will have to be altered or changed slightly.</p></p>
 				</div>
 			</div>
 
@@ -238,49 +233,21 @@
 			</div>
 
 
-			<div class="section-padding flex-center">
-				<div class="content-container">
-					<h4> [CREATION / PROTOTYPING] </h4>
-					<p><strong>Mark 01</strong><br>
-					In the initial stages of the board design I started by taking my designs and importing them into Rhinoceros. While the learning curve for this program was slightly challenging, it was convenient that you could work seamlessly between Adobe Illustrator and Rhino. It allowed me to be able to design paths in Illustrator and work with them in Rhino.</p>
 
-					<p><strong>Mark 02</strong><br>For the hinge to be connected to the bottom of the board, I added two attachments to the underside of the prototype that will hold the joint in place. While the pieces may look large in this rendering, their actual height is only 1.25’’.</p>
+		<div class="learning-outcome-container flex-center">
+				<div class="medium-container-ch">
+					<h4 class="type-challenge">[LEARNING OUTCOME]</h4>
+					<h2> This product helped to strengthen my overall design process by allowing me to complete more focused user jouneys & user research, resulting in key pain-points that I was then able to build into featured solutions.</h2>
 				</div>
 			</div>
 
-			<div class="section-full flex-center">
-				<div class="pull-tech-color grey flex-center">
-					<div class="pull-tech flex-sb">
-						<div class="pull-tech-text charcoal">
-							<h2> Folding allows for ease of portability while at the same time helps create a stronger user & product relationship. </h2>
-						</div>
-						<div class="pull-tech-drawing">
-							<object type="image/svg+xml" data="images/KitsuneBoardTech2.svg"> Kitsune App Technical Drawing (Folding) </object>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="section-padding flex-center">
-				<div class="content-container">
-					<h4> [CREATION / PROTOTYPING] </h4>
-					<p><strong>Mark 03</strong><br>
-					In order to improve upon the previous design, I have made the board thicker to give it additional strength. As the board thickens it tapers slightly to allow for a sleeker product. When fabricating Mark 2 I was not satisfied with the curve of the board and for this prototype I decided to make it more drastic.</p>
-
-					<p>As this was another big stage in the design process I decided to fabricate this prototype and attach the wheels. By measuring the placement on Mark 2, I was able to position them on the board in a way that allows them to line up.</p>
-
-					<p><strong>Mark 04</strong><br>In order to improve upon the previous design, I have made the board thicker to give it additional strength. As the board thickens it tapers slightly to allow for a sleeker product. When fabricating Mark 2 I was not satisfied with the curve of the board and for this prototype I decided to make it more drastic. </p>
-
-					<p>As this was another big stage in the design process I decided to fabricate this prototype and attach the wheels. By measuring the placement on Mark 2, I was able to position them on the board in a way that allows them to line up.</p>
-				</div>
-			</div>
 
 			<div class="section-full flex-center">
 				<div class="pull-tech-color blue flex-center rounded-corners">
 					<div class="pull-tech flex-sb">
 						<div class="cto-text white">
 							<h2>The companion product acts as the base for the added functionality of the Kitsune mobile app.</h2>
-							<h4>View Case Study</h4>
+							<a href="kitsuneBoard.html"><h4>View Case Study</h4></a>
 						</div>
 						<div class="pull-tech-drawing">
 							<object type="image/svg+xml" data="images/KitsuneBoardCTO.svg"> Kitsune App CTO </object>
@@ -331,69 +298,7 @@
    			$('.song-artist').html("– " +artist+"\ ");
 
   });
-
-
- 	//Skateboard Parallax Scroll Effect-----------
-
- 	// define images
-						var images = [
-							"images/parallax/brock_v1_01.png",
-							"images/parallax/brock_v1_02.png",
-							"images/parallax/brock_v1_03.png",
-							"images/parallax/brock_v1_04.png",
-							"images/parallax/brock_v1_05.png",
-							"images/parallax/brock_v1_06.png",
-							"images/parallax/brock_v1_07.png",
-							"images/parallax/brock_v1_08.png",
-							"images/parallax/brock_v1_09.png",
-							"images/parallax/brock_v1_10.png",
-							"images/parallax/brock_v1_11.png",
-							"images/parallax/brock_v1_12.png",
-							"images/parallax/brock_v1_13.png",
-							"images/parallax/brock_v1_14.png",
-							"images/parallax/brock_v1_15.png",
-							"images/parallax/brock_v1_16.png",
-							"images/parallax/brock_v1_17.png",
-							"images/parallax/brock_v1_18.png",
-							"images/parallax/brock_v1_19.png",
-							"images/parallax/brock_v1_20.png",
-							"images/parallax/brock_v1_21.png",
-							"images/parallax/brock_v1_22.png",
-							"images/parallax/brock_v1_23.png",
-							"images/parallax/brock_v1_24.png",
-							"images/parallax/brock_v1_25.png"
-						];
-
-						// TweenMax can tween any property of any object. We use this object to cycle through the array
-						var obj = {curImg: 0};
-
-						// create tween
-						var tween = TweenMax.to(obj, 0.5,
-							{
-								curImg: images.length - 1,	// animate propery curImg to number of images
-								roundProps: "curImg",				// only integers so it can be used as an array index
-								repeat: 0,									// repeat 3 times
-								immediateRender: true,			// load first image automatically
-								ease: Linear.easeNone,			// show every image the same ammount of time
-								onUpdate: function () {
-								  $(".skateboard-render").attr("src", images[obj.curImg]); // set the image source
-								}
-							}
-						);
-
-						// init controller
-						var controller = new ScrollMagic.Controller();
-
-						// build scene
-						var scene = new ScrollMagic.Scene({triggerElement: "#trigger", duration: 600})
-										.setTween(tween)
-										//.addIndicators() // add indicators (requires plugin)
-										.addTo(controller);
-
-						// handle form change
-						$("form.move input[name=duration]:radio").change(function () {
-							scene.duration($(this).val());
-						});
+});
 
  </script>
 
