--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -25,7 +25,7 @@
 			––––––––––––––––––––––––––––––-->
 			<div class="header-desktop">
 				<ul class="header-content flex-header">
-					<li>Brock Donaldson</li>
+					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social"><li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
 					<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><span class="song-title" ></span><span class="song-artist"></span></a></li>
@@ -263,6 +263,13 @@
 					<p><strong>Mark 04</strong><br>In order to improve upon the previous design, I have made the board thicker to give it additional strength. As the board thickens it tapers slightly to allow for a sleeker product. When fabricating Mark 2 I was not satisfied with the curve of the board and for this prototype I decided to make it more drastic. </p>
 
 					<p>As this was another big stage in the design process I decided to fabricate this prototype and attach the wheels. By measuring the placement on Mark 2, I was able to position them on the board in a way that allows them to line up.</p>
+				</div>
+			</div>
+
+			<div class="learning-outcome-container flex-center">
+				<div class="medium-container-ch">
+					<h4 class="type-challenge">[LEARNING OUTCOME]</h4>
+					<h2> Throughout this Product's creation I was able to learn and understand the key principals Human Centered Design and how they relate to all aspects of design. </h2>
 				</div>
 			</div>
 
