--- a/vitaDonationApp.html
+++ b/vitaDonationApp.html
@@ -25,7 +25,7 @@
 			––––––––––––––––––––––––––––––-->
 			<div class="header-desktop">
 				<ul class="header-content flex-header">
-					<li>Brock Donaldson</li>
+					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social"><li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
 					<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><span class="song-title" ></span><span class="song-artist"></span></a></li>
@@ -105,7 +105,7 @@
 
 			<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img src="images/VitaDonorAppMockup6.jpg" alt="Kitsune App Board Sycing photo">
+					<img src="images/VitaDonorAppMockup8.jpg" alt="Kitsune App Board Sycing photo">
 				</div>
 			</div>
 
@@ -130,6 +130,12 @@
 				</div>
 			</div>
 
+			<div class="learning-outcome-container flex-center">
+				<div class="medium-container-ch">
+					<h4 class="type-challenge">[LEARNING OUTCOME]</h4>
+					<h2> I was able to gain a greater understanding on presenting complex topics in a way that it could be understood by a general audience.</h2>
+				</div>
+			</div>
 
 
 
@@ -137,7 +143,7 @@
 				<div class="pull-tech-color blue flex-center rounded-corners">
 					<div class="pull-tech flex-sb">
 						<div class="cto-text white">
-							<h2>The companion app allows users to track ride stastitics in real time using installed hardware in the board.</h2>
+							<h2>The Kitsune App is a product that advocates for alternative transportation.</h2>
 							<a href="kitsuneApp.html""><h4>View Case Study</h4></a>
 						</div>
 						<div class="pull-tech-drawing">
@@ -160,6 +166,7 @@
 				</ul>
 			</div>
 		</div>
+
 
 		<div class="footer-container-mobile">
 			<div class="footer">
