--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 			<div class="about-container flex-center">
 				<div class="about-content">
 
-					<h2> Houston? </h2>
-					<p>I’m Brock, a designer, space enthusiast, and an advocate for using design as a gateway to improve the lives of anyone and everyone. </h3>
+					<h2> …houston? </h2>
+					<p class="larger-p">I’m a designer, space enthusiast, and an advocate for using design as a gateway to improve the lives of anyone and everyone. <!-- and a people watcher --> </h3>
 					<p> I have always been drawn to understanding how people and products interact. Whether that’s myself struggling for the third time that day to pull a push door, or watching my friends decide if a cold brew at 4pm is the right decision, each makes me rethink the potential for better solutions.  </p>
-					<p>I live and work in Toronto, where I have been designing digital experiences at <a href="http://www.konradgroup.com" target="_blank"> Konrad Group </a> since my graduation from <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design </a> program. I’ve also recently re-entered the world of code and am working on some exciting side projects with my friends through a design collective called <a href="http://smolhax.co" target="_blank"> Smolhax. </a></p>
+					<p>I live and work in Toronto, where I have been designing digital experiences at <a href="http://www.konradgroup.com" target="_blank">Konrad Group</a> since my graduation from <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program. I’ve also recently re-entered the world of code and am working on some exciting side projects with my friends through a design collective called <a href="http://smolhax.co" target="_blank"> Smolhax. </a></p>
 					<p>✌️️ </p>
 					<div class="social-about">
 						<ul class="social-links">
