--- a/vitaDonationApp.html
+++ b/vitaDonationApp.html
@@ -37,7 +37,7 @@
 			––––––––––––––––––––––––––––––-->
 				<div class="header-mobile">
 				<ul class="header-content flex-header">
-					<li>Brock Donaldson</li>
+					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social">
 						<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
 						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
