--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -37,7 +37,7 @@
 			––––––––––––––––––––––––––––––-->
 				<div class="header-mobile">
 				<ul class="header-content flex-header">
-					<li>Brock Donaldson</li>
+					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social">
 						<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
 						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
@@ -138,7 +138,7 @@
 			<div class="section-full flex-center">
 				<div class="pull-tech-color blue flex-center">
 					<div class="pull-quote flex-column">
-						<h4> Johnathan Ive (Apple)</h4>
+						<h4> Johnathan Ive</h4>
 						<h2> There is beauty when something works and it works intuitively, and it doesn’t expect you to have to read an instruction book. </h2>
 					</div>
 				</div>
@@ -309,6 +309,47 @@
 		</div>
 
 	</div>
+
+	<div class="hidden">
+	<script type="text/javascript">
+		<!--//--><![CDATA[//><!--
+			var images = new Array()
+			function preload() {
+				for (i = 0; i < preload.arguments.length; i++) {
+					images[i] = new Image()
+					images[i].src = preload.arguments[i]
+				}
+			}
+			preload(
+							"images/parallax/brock_v1_01.png",
+							"images/parallax/brock_v1_02.png",
+							"images/parallax/brock_v1_03.png",
+							"images/parallax/brock_v1_04.png",
+							"images/parallax/brock_v1_05.png",
+							"images/parallax/brock_v1_06.png",
+							"images/parallax/brock_v1_07.png",
+							"images/parallax/brock_v1_08.png",
+							"images/parallax/brock_v1_09.png",
+							"images/parallax/brock_v1_10.png",
+							"images/parallax/brock_v1_11.png",
+							"images/parallax/brock_v1_12.png",
+							"images/parallax/brock_v1_13.png",
+							"images/parallax/brock_v1_14.png",
+							"images/parallax/brock_v1_15.png",
+							"images/parallax/brock_v1_16.png",
+							"images/parallax/brock_v1_17.png",
+							"images/parallax/brock_v1_18.png",
+							"images/parallax/brock_v1_19.png",
+							"images/parallax/brock_v1_20.png",
+							"images/parallax/brock_v1_21.png",
+							"images/parallax/brock_v1_22.png",
+							"images/parallax/brock_v1_23.png",
+							"images/parallax/brock_v1_24.png",
+							"images/parallax/brock_v1_25.png"
+			)
+		//--><!]]>
+	</script>
+</div>
 
 
   <script type="text/javascript" src="js/TweenMax.min.js"></script>
