--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="icon" type="image/png" sizes="96x96" href="images/fav.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="images/fav1.png">
+
 
   <script type="text/javascript" src="js/TweenMax.min.js"></script>
 	<script type="text/javascript" src="js/ScrollMagic.js"></script>
