--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -8,6 +8,12 @@
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+  <meta property="og:url" content="http://brockdonaldson.co/kitsuneApp.html">
+	<meta property="og:title" content="Brock Donaldson; Design Portfolio">
+	<meta property="og:description" content="A collection of case studies">
+	<meta property="og:image" content="images/facebook.png">
+	<meta property="og:image:width" content="1200">
+
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="icon" type="image/png" sizes="96x96" href="images/fav.png">
 
@@ -278,6 +284,23 @@
 		</div>
 
 	</div>
+
+	<div class="hidden">
+	<script type="text/javascript">
+		<!--//--><![CDATA[//><!--
+			var images = new Array()
+			function preload() {
+				for (i = 0; i < preload.arguments.length; i++) {
+					images[i] = new Image()
+					images[i].src = preload.arguments[i]
+				}
+			}
+			preload(
+							"images/KitsuneAppMockup3.png",
+			)
+		//--><!]]>
+	</script>
+</div>
 
 
 
