--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -8,6 +8,12 @@
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+
+  <meta property="og:url" content="http://brockdonaldson.co/kitsuneBoard.html">
+	<meta property="og:title" content="Brock Donaldson; Design Portfolio">
+	<meta property="og:description" content="A collection of case studies">
+	<meta property="og:image" content="images/facebook.png">
+	<meta property="og:image:width" content="1200">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="icon" type="image/png" sizes="96x96" href="images/fav.png">
 
@@ -269,7 +275,7 @@
 			<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">[LEARNING OUTCOME]</h4>
-					<h2> Throughout this Product's creation I was able to learn and understand the key principals Human Centered Design and how they relate to all aspects of design. </h2>
+					<h2> Throughout this Product's creation I was able to learn and understand the key principals of Human Centered Design and how they relate to all aspects of design. </h2>
 				</div>
 			</div>
 
