--- a/vitaDonationApp.html
+++ b/vitaDonationApp.html
@@ -8,6 +8,12 @@
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+
+  <meta property="og:url" content="http://brockdonaldson.co/vitaDonationApp.html">
+	<meta property="og:title" content="Brock Donaldson; Design Portfolio">
+	<meta property="og:description" content="A collection of case studies">
+	<meta property="og:image" content="images/facebook.png">
+	<meta property="og:image:width" content="1200">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="icon" type="image/png" sizes="96x96" href="images/fav.png">
 
